add some cplusplus util classes

--- a/pages/about.en-US.mdx
+++ b/pages/about.en-US.mdx
@@ -9,11 +9,11 @@ In my free time, I started learning e-marketing. After a while I started with de
 
 ## Embracing Programming
 
-I began with Websites for teaching programming for children and the Google Grasshopper app, enjoying learning JavaScript. This led me to FreeCodeCamp, where I learned HTML, CSS, and JavaScript. I also took a Front-End courses on https://elzero.org/ with Eng. Osama Elzero and practiced on a lot of small projects on Frontend Mentor Website.
+I began with Websites for teaching programming for children and the Google Grasshopper app, enjoying learning JavaScript. This led me to FreeCodeCamp, where I learned HTML, CSS, and JavaScript. I also took a Front-End courses with Eng. [Osama Elzero](https://elzero.org/) and practiced on a lot of small projects on Frontend Mentor Website.
 
 I wanted a deeper understanding of computer science, so I took Harvard’s CS50 course and Crash Course Computer Science.
 
-A big moment for me was finding Dr. Mohammed Abu-Hadhoud’s Programming Advices channel. His clear and detailed explanations kept me motivated to learn more about problem-solving, C++, data structures, algorithms, C#, the .NET Framework, and SQL for database management. I finally felt like a capable programmer.
+A big moment for me was finding [Dr. Mohammed Abu-Hadhoud’s](https://programmingadvices.com/) Programming Advices road map. His clear and detailed explanations kept me motivated to learn more about problem-solving, C++, data structures, algorithms, C#, the .NET Framework, and SQL for database management. I finally felt like a capable programmer.
 
 ## Current and Future Endeavors
 
