--- a/pages/index.en-US.mdx
+++ b/pages/index.en-US.mdx
@@ -5,3 +5,25 @@ import { Callout } from 'nextra/components'
 <Callout type="warning" emoji="⚠️">
   This Website is work in progrees.
 </Callout>
+
+This Website is a Documentation for my projects and a Reference to help me and others
+
+## Roadmap
+
+### Reference
+
+- [x] ~Add MDX syntax~
+- [x] Add C++ Util Classes
+- [x] Add Problem Solving
+- [x] Add some Algorithms
+- [x] Add simple Data Structures
+- [x] Add OOP 
+- [x] Add SQL 
+- [x] Add RESTFUL API 
+- [x] Add React 
+
+### Projects
+
+- [x] Add first Windows Forms project
+- [x] Add FrontEnd Mentor Challenges
+- [x] Add Freelance work
