--- a/pages/index.en-US.mdx
+++ b/pages/index.en-US.mdx
@@ -13,7 +13,7 @@ This Website is a Documentation for my projects and a Reference to help me and o
 ### Reference
 
 - [x] ~Add MDX syntax~
-- [x] Add C++ Util Classes
+- [x] ~Add C++ Util Classes~
 - [x] Add Problem Solving
 - [x] Add some Algorithms
 - [x] Add simple Data Structures
