--- a/pages/about.ar-SA.mdx
+++ b/pages/about.ar-SA.mdx
@@ -1,1 +1,26 @@
-# نبذة عنا
+# نبذة عني
+
+بعد حصولي على درجة البكالوريوس في العلوم الزراعية، قررت البحث عن فرص في الخارج.
+لكن خلال جائحة كوفيد-19، أدركت أنني بحاجة إلى تعلم مهارات جديدة. لقد قمت بإعداد قائمة بثلاث مهارات لتجربتها: التسويق الإلكتروني، والتصميم، والبرمجة على تردد، اعتقدت أن البرمجة مخصصة للأشخاص الأذكياء فقط.
+
+## بداية رحلتي التعليمية
+
+وفي أوقات فراغي بدأت أتعلم التسويق الإلكتروني. وبعد فترة بدأت بالتصميم، فتعلمت Photoshop وIllustrator وInDesign وPremiere Pro.
+
+## احتضان البرمجة
+
+لقد بدأت مع مواقع الويب لتعليم البرمجة للأطفال وتطبيق Google Grasshopper، واستمتعت بتعلم JavaScript. قادني هذا إلى FreeCodeCamp، حيث تعلمت HTML وCSS وJavaScript. لقد أخذت أيضًا دورات Front-End مع المهندس. [أسامة الزيرو](https://elzero.org/) وتدرب على الكثير من المشاريع الصغيرة على موقع Frontend Mentor.
+
+كنت أرغب في الحصول على فهم أعمق لعلوم الكمبيوتر، لذلك التحقت بدورة CS50 بجامعة هارفارد ودورة مكثفة لعلوم الكمبيوتر.
+
+كانت اللحظة الكبيرة بالنسبة لي هي العثور على [د. محمد أبو الهدهود](https://programmingadvices.com/) خريطة الطريق لنصائح البرمجة. لقد حفزتني تفسيراته الواضحة والمفصلة لمعرفة المزيد حول حل المشكلات ولغة C++‎ وهياكل البيانات والخوارزميات وC# و.NET Framework وSQL لإدارة قواعد البيانات. شعرت أخيرًا بأنني مبرمج قادر.
+
+## المساعي الحالية والمستقبلية
+
+قمت مؤخرًا بتطوير نظام إدارة المتاحف باستخدام SQL و.NET Framework وADO.NET.
+
+أحب تحليل احتياجات المشاريع، وإنشاء قاعدة بيانات باستخدام SQL، وتصميم بنيات ثلاثية المستويات، وإنشاء واجهات برمجة التطبيقات (APIs) للتواصل مع أطر عمل الواجهة الأمامية مثل React.js، المفضل لدي. أفكر أيضًا في تعلم AngularJS.
+
+## أتطلع إلى
+
+أنا متحمس للانضمام إلى فريق محترف حيث يمكنني مواصلة التعلم ومشاركة معرفتي والمساعدة في حل المشكلات. أريد أن أكون جزءًا من شركة ديناميكية تخلق حلولاً متقدمة وتحدث تأثيرًا حقيقيًا.
