--- a/pages/index.en-US.mdx
+++ b/pages/index.en-US.mdx
@@ -8,16 +8,22 @@ import { Callout } from 'nextra/components'
 
 This Website is a Documentation for my projects and a Reference to help me and others
 
+import { Cards, Card } from 'nextra/components'
+ 
+<Cards>
+  <Card title="Reference" href="/reference" />
+  <Card title="Projects" href="/projects" />
+</Cards>
+
 ## Roadmap
 
 ### Reference
 
 - [x] ~Add MDX syntax~
 - [x] ~Add C++ Util Classes~
-- [x] Add Problem Solving
-- [x] Add some Algorithms
-- [x] Add simple Data Structures
+- [x] ~Add Problem Solving~
 - [x] Add OOP 
+- [x] Add simple Data Structures and Algorithms
 - [x] Add SQL 
 - [x] Add RESTFUL API 
 - [x] Add React 
